# miopen_rnn_benchmark

./: CMakeLists.txt  Makefile  README.md
90/: bottleneck_1_block_group1_1_1.npy  bottleneck_1_block_group1_2_1.npy  bottleneck_1_block_group2_1_1.npy  bottleneck_1_block_group2_2_1.npy  bottleneck_1_block_group2_3_1.npy  bottleneck_1_block_group3_1_1.npy  bottleneck_1_block_group3_2_1.npy  bottleneck_1_block_group3_3_1.npy  bottleneck_1_block_group3_4_1.npy  bottleneck_1_block_group3_5_1.npy  bottleneck_1_block_group_projection_block_group1.npy  bottleneck_1_block_group_projection_block_group2.npy  bottleneck_1_block_group_projection_block_group3.npy  bottleneck_1_block_group_projection_block_group4.npy  bottleneck_2_block_group1_1_1.npy  bottleneck_2_block_group1_2_1.npy  bottleneck_2_block_group2_1_1.npy  bottleneck_2_block_group2_2_1.npy  bottleneck_2_block_group2_3_1.npy  bottleneck_2_block_group3_1_1.npy  bottleneck_2_block_group3_2_1.npy  bottleneck_2_block_group3_3_1.npy  bottleneck_2_block_group3_4_1.npy  bottleneck_2_block_group3_5_1.npy  bottleneck_2_block_group_projection_block_group1.npy  bottleneck_2_block_group_projection_block_group2.npy  bottleneck_2_block_group_projection_block_group3.npy  bottleneck_3_block_group1_1_1.npy  bottleneck_3_block_group1_2_1.npy  bottleneck_3_block_group2_1_1.npy  bottleneck_3_block_group2_2_1.npy  bottleneck_3_block_group2_3_1.npy  bottleneck_3_block_group3_1_1.npy  bottleneck_3_block_group3_2_1.npy  bottleneck_3_block_group3_3_1.npy  bottleneck_3_block_group3_4_1.npy  bottleneck_3_block_group3_5_1.npy  (+9 more)
code/: Makefile
(+199 files in other folders)
